--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,15 @@ footer {
 	background: #666;
 	border-top: 5px solid #4AAAA5;
 }
+
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 640px) {
+
+}
