--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,32 @@ footer {
 	border-top: 5px solid #4AAAA5;
 }
 
+#name {
+	padding: 20px 15px;
+	font-size: 26px;
+	font-weight: bold;
+	color: #FFF;
+	background-color: #4AAAA5;
+}
+
+.container {
+	width: 960px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+ul {
+	display: flex;
+	list-style: none;
+}
+
+ul li {
+	margin: 0 15px;
+	font-weight: bold;
+	color: #777;
+}
+
 @media screen and (max-width: 980px) {
 
 }
