--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ a:hover {
 
 .aside {
 	width: 35%;
-	max-height: 200px;
+	height: 200px;
 	background: #FFF;
 	margin: 30px 0;
 	border: 2px solid #CCC;
@@ -113,6 +113,7 @@ a:hover {
 
 .links {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 }
