--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-between;
 	height: 100vh;
 	width: 100%;
 	margin: 0;
@@ -62,6 +63,7 @@ a:hover {
 	width: 960px;
 	display: flex;
 	justify-content: space-between;
+	height: 100%;
 }
 
 .verticle-center {
@@ -114,8 +116,9 @@ a:hover {
 .links {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
+	margin: 0 40px;
 }
 
 .aside-header {
@@ -146,7 +149,14 @@ ul li {
 }
 
 @media screen and (max-width: 980px) {
-
+	body {
+		height: 100%;
+	}
+	.links {
+		justify-content: center;
+		padding-bottom: 20px;
+		flex-wrap: nowrap;
+	}
 }
 
 @media screen and (max-width: 768px) {
@@ -155,4 +165,63 @@ ul li {
 
 @media screen and (max-width: 640px) {
 
+	footer {
+		/*position: absolute;*/
+		/*top: 100vh;*/
+	}
+
+	body {
+		height: 100%;
+	}
+
+	section {
+		flex: 1;
+	}
+
+	 section .container {
+		width: 90%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	#me {
+		margin: 20px 0;
+		width: 50%;
+		height: 50%;
+	}
+
+	.innards {
+		display: flex;
+		flex-direction: column;
+		margin: 30px 0;
+	}
+
+	.photo-text {
+		padding: 0 40px;
+	}
+
+	.content {
+		width: 100%;
+		height: 100%;
+		margin: 30px 0;
+		overflow: sroll;
+	}
+	
+	.aside {
+		width: 100%;
+	}
+
+	.links {
+		justify-content: center;
+		padding-bottom: 20px;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.links {
+		justify-content: center;
+		flex-wrap: nowrap;
+	}
 }
